--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Mobile Developer  
+  uni: Pluralsight
+  year: March, 2021 &mdash; January, 2016
   # awards:
-  # summary:
+  # summary: Student
